Use Collections Framework for Singleton Test